Fix 4 plans re-ordering on mobile

--- a/packages/components/containers/offers/Offer.scss
+++ b/packages/components/containers/offers/Offer.scss
@@ -111,10 +111,7 @@ $amount-size: 34; // should be 36, but don't increase more than 34, otherwise we
 
 	// special 2x2 stacking for four plan case
 	&-main-wrapper--four-plans &-wrapper {
-		/* @include media('<=#{em(1000, 16)}') {
-
-		} */
-
+		// special 2x2 stacking for four plan case
 		@include media('<=#{em(1200, 16)}') {
 			flex-wrap: wrap;
 
@@ -135,6 +132,27 @@ $amount-size: 34; // should be 36, but don't increase more than 34, otherwise we
 
 				&:not(:first-child) {
 					margin-inline-start: 0;
+				}
+			}
+		}
+
+		// special redorder feature for four plan case
+		@include media('<=small') {
+			.offer-plan-container {
+				&--mostPopularOnMobile {
+					order: -4;
+				}
+
+				&--secondMostPopularOnMobile {
+					order: -3;
+				}
+
+				&--thirdMostPopularOnMobile {
+					order: -2;
+				}
+
+				&--fourthMostPopularOnMobile {
+					order: -1;
 				}
 			}
 		}
